torch-sys/src/c_generated.rs

    pub fn atg_baddbmm_out(result_: *mut C_tensor, self_: *mut C_tensor, batch1_: *mut C_tensor, batch2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_bartlett_window(window_length_: i64, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_bartlett_window1(window_length_: i64, periodic_: c_int, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_batch_norm(input_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, running_mean_: *mut C_tensor, running_var_: *mut C_tensor, training_: c_int, momentum_: f64, eps_: f64, cudnn_enabled_: c_int) -> *mut *mut C_tensor;
    pub fn atg_bernoulli(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_bernoulli1(self_: *mut C_tensor, p_: f64) -> *mut *mut C_tensor;
    pub fn atg_bernoulli_(self_: *mut C_tensor, p_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_bernoulli_1(self_: *mut C_tensor, p_: f64) -> *mut *mut C_tensor;
    pub fn atg_bernoulli_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_bilinear(input1_: *mut C_tensor, input2_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_binary_cross_entropy(self_: *mut C_tensor, target_: *mut C_tensor, weight_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_binary_cross_entropy_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, weight_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_binary_cross_entropy_backward_out(grad_input_: *mut C_tensor, grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, weight_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_binary_cross_entropy_out(output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, weight_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_binary_cross_entropy_with_logits(self_: *mut C_tensor, target_: *mut C_tensor, weight_: *mut C_tensor, pos_weight_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_binary_cross_entropy_with_logits_backward(grad_output_: *mut C_tensor, self_: *mut C_tensor, target_: *mut C_tensor, weight_: *mut C_tensor, pos_weight_: *mut C_tensor, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_bincount(self_: *mut C_tensor, weights_: *mut C_tensor, minlength_: i64) -> *mut *mut C_tensor;
    pub fn atg_blackman_window(window_length_: i64, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_blackman_window1(window_length_: i64, periodic_: c_int, options_kind: c_int, options_device: c_int) -> *mut *mut C_tensor;
    pub fn atg_bmm(self_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_bmm_out(result_: *mut C_tensor, self_: *mut C_tensor, mat2_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_broadcast_tensors(tensors_data: *const *mut C_tensor, tensors_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_btrifact(self_: *mut C_tensor, pivot_: c_int) -> *mut *mut C_tensor;
    pub fn atg_btrifact_out(A_LU_: *mut C_tensor, pivots_: *mut C_tensor, self_: *mut C_tensor, pivot_: c_int) -> *mut *mut C_tensor;
    pub fn atg_btrifact_with_info(self_: *mut C_tensor, pivot_: c_int) -> *mut *mut C_tensor;
    pub fn atg_btrifact_with_info_out(A_LU_: *mut C_tensor, pivots_: *mut C_tensor, info_: *mut C_tensor, self_: *mut C_tensor, pivot_: c_int) -> *mut *mut C_tensor;
    pub fn atg_btrisolve(self_: *mut C_tensor, LU_data_: *mut C_tensor, LU_pivots_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_btrisolve_out(result_: *mut C_tensor, self_: *mut C_tensor, LU_data_: *mut C_tensor, LU_pivots_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_cat(tensors_data: *const *mut C_tensor, tensors_len: c_int, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_cat_out(result_: *mut C_tensor, tensors_data: *const *mut C_tensor, tensors_len: c_int, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_cauchy_(self_: *mut C_tensor, median_: f64, sigma_: f64) -> *mut *mut C_tensor;
    pub fn atg_ceil(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_ceil_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_ceil_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_celu(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_celu_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_chain_matmul(matrices_data: *const *mut C_tensor, matrices_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_cholesky(self_: *mut C_tensor, upper_: c_int) -> *mut *mut C_tensor;
    pub fn atg_cholesky_out(result_: *mut C_tensor, self_: *mut C_tensor, upper_: c_int) -> *mut *mut C_tensor;
    pub fn atg_chunk(self_: *mut C_tensor, chunks_: i64, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_clamp(self_: *mut C_tensor, min_: *mut C_scalar, max_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_clamp_(self_: *mut C_tensor, min_: *mut C_scalar, max_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_clamp_max(self_: *mut C_tensor, max_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_clamp_max_(self_: *mut C_tensor, max_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_clamp_max_out(result_: *mut C_tensor, self_: *mut C_tensor, max_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_clamp_min(self_: *mut C_tensor, min_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_clamp_min_(self_: *mut C_tensor, min_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_clamp_min_out(result_: *mut C_tensor, self_: *mut C_tensor, min_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_clamp_out(result_: *mut C_tensor, self_: *mut C_tensor, min_: *mut C_scalar, max_: *mut C_scalar) -> *mut *mut C_tensor;
    pub fn atg_coalesce(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_constant_pad_nd(self_: *mut C_tensor, pad_data: *const i64, pad_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_contiguous(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_conv1d(input_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64) -> *mut *mut C_tensor;
    pub fn atg_conv2d(input_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64) -> *mut *mut C_tensor;
    pub fn atg_conv3d(input_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64) -> *mut *mut C_tensor;
    pub fn atg_conv_tbc(self_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, pad_: i64) -> *mut *mut C_tensor;
    pub fn atg_conv_tbc_backward(self_: *mut C_tensor, input_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, pad_: i64) -> *mut *mut C_tensor;
    pub fn atg_conv_transpose1d(input_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, output_padding_data: *const i64, output_padding_len: c_int, groups_: i64, dilation_data: *const i64, dilation_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_conv_transpose2d(input_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, output_padding_data: *const i64, output_padding_len: c_int, groups_: i64, dilation_data: *const i64, dilation_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_conv_transpose3d(input_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, output_padding_data: *const i64, output_padding_len: c_int, groups_: i64, dilation_data: *const i64, dilation_len: c_int) -> *mut *mut C_tensor;
    pub fn atg_convolution(input_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, stride_data: *const i64, stride_len: c_int, padding_data: *const i64, padding_len: c_int, dilation_data: *const i64, dilation_len: c_int, transposed_: c_int, output_padding_data: *const i64, output_padding_len: c_int, groups_: i64) -> *mut *mut C_tensor;
    pub fn atg_copy_sparse_to_sparse_(self_: *mut C_tensor, src_: *mut C_tensor, non_blocking_: c_int) -> *mut *mut C_tensor;
    pub fn atg_cos(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_cos_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_cos_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_cosh(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_cosh_(self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_cosh_out(result_: *mut C_tensor, self_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_cosine_embedding_loss(input1_: *mut C_tensor, input2_: *mut C_tensor, target_: *mut C_tensor, margin_: f64, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_cross(self_: *mut C_tensor, other_: *mut C_tensor, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_cross_out(result_: *mut C_tensor, self_: *mut C_tensor, other_: *mut C_tensor, dim_: i64) -> *mut *mut C_tensor;
    pub fn atg_ctc_loss(log_probs_: *mut C_tensor, targets_: *mut C_tensor, input_lengths_data: *const i64, input_lengths_len: c_int, target_lengths_data: *const i64, target_lengths_len: c_int, blank_: i64, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_ctc_loss1(log_probs_: *mut C_tensor, targets_: *mut C_tensor, input_lengths_: *mut C_tensor, target_lengths_: *mut C_tensor, blank_: i64, reduction_: i64) -> *mut *mut C_tensor;
    pub fn atg_cudnn_affine_grid_generator(theta_: *mut C_tensor, N_: i64, C_: i64, H_: i64, W_: i64) -> *mut *mut C_tensor;
    pub fn atg_cudnn_affine_grid_generator_backward(grad_: *mut C_tensor, N_: i64, C_: i64, H_: i64, W_: i64) -> *mut *mut C_tensor;
    pub fn atg_cudnn_batch_norm(input_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, running_mean_: *mut C_tensor, running_var_: *mut C_tensor, training_: c_int, exponential_average_factor_: f64, epsilon_: f64) -> *mut *mut C_tensor;
    pub fn atg_cudnn_batch_norm_backward(input_: *mut C_tensor, grad_output_: *mut C_tensor, weight_: *mut C_tensor, running_mean_: *mut C_tensor, running_var_: *mut C_tensor, save_mean_: *mut C_tensor, save_var_: *mut C_tensor, epsilon_: f64) -> *mut *mut C_tensor;
    pub fn atg_cudnn_convolution(self_: *mut C_tensor, weight_: *mut C_tensor, bias_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64, benchmark_: c_int, deterministic_: c_int) -> *mut *mut C_tensor;
    pub fn atg_cudnn_convolution_backward_bias(grad_output_: *mut C_tensor) -> *mut *mut C_tensor;
    pub fn atg_cudnn_convolution_backward_input(self_size_data: *const i64, self_size_len: c_int, grad_output_: *mut C_tensor, weight_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64, benchmark_: c_int, deterministic_: c_int) -> *mut *mut C_tensor;
    pub fn atg_cudnn_convolution_backward_weight(weight_size_data: *const i64, weight_size_len: c_int, grad_output_: *mut C_tensor, self_: *mut C_tensor, padding_data: *const i64, padding_len: c_int, stride_data: *const i64, stride_len: c_int, dilation_data: *const i64, dilation_len: c_int, groups_: i64, benchmark_: c_int, deterministic_: c_int) -> *mut *mut C_tensor;
